# piper_car_sim

my_arm_description/: CMakeLists.txt  package.xml
my_arm_description/config/: ros2_controllers.yaml  ros2_no_gripper_controllers.yaml
my_arm_description/launch/: bringup.launch.py  control.launch  display_no_gripper_urdf.launch.py  display_piper_with_gripper_rviz.launch.py  gazebo_only_gripper_urdf.launch.py  gazebo_only_piper_arm_urdf.launch.py  gazebo_only_piper_urdf.launch.py  gazebo_only_piper_urdf.launch_bak.py  gazebo_with_only_my_gripper_urdf.launch.py  gazebo_with_piper_my_gripper_urdf.launch.py  new.launch.py  piper_no_gripper_sim_gazebo_sim.launch.py  sim_with_my_gripper_urdf.launch.py
my_arm_description/meshes/: test.STL
my_arm_description/meshes/log/: latest_build
my_arm_description/rviz/: piper_no_gripper.rviz  piper_without_gipper.rviz  rviz.rviz
my_arm_description/urdf/: fw_mid.xacro  only_gripper.urdf.xacro  only_piper_description_gazebo.xacro  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro  piper_with_gripper_description.xacro  piper_with_my_gripper_description_gazebo.urdf.xacro  robo_car.urdf.xacro  test_gripper.urdf.xacro
my_arm_description/world/: desk_with_cube.world
urdf_sim_tutorial/launch/: 10-head.launch.py  gazebo.launch.py
urdf_tutorial/launch/: auto_load_xacro.launch.py
